# therssproject

./: .gitignore  Cargo.toml  Procfile  README.md  RustConfig  docker-compose.yml  insomnia.json
api/: .gitignore  Cargo.toml  test.sh
api/config/: default.json  test.json
api/src/: context.rs  database.rs  errors.rs  feed_scheduler.rs  logger.rs  main.rs  messenger.rs  scheduler.rs  settings.rs  subscription_scheduler.rs
api/src/authentication/: application.rs  key.rs  mod.rs  user.rs
api/src/lib/: authenticate_application.rs  authenticate_request.rs  create_random_string.rs  custom_response.rs  database_model.rs  fetch_rss.rs  mod.rs  paginated_response.rs  pagination.rs  request_query.rs  token.rs
api/src/models/: application.rs  endpoint.rs  entry.rs  feed.rs  key.rs  mod.rs  subscription.rs  subscription_job.rs  user.rs  webhook.rs
api/src/routes/: application.rs  endpoint.rs  feed.rs  key.rs  mod.rs  subscription.rs  user.rs  webhook.rs
api/src/schedulers/: feed.rs  mod.rs  subscription.rs
api/src/scripts/: cleanup_feeds.rs  create_subscriptions.rs  mod.rs
api/src/tests/: mod.rs  setup.rs  utils.rs
api/src/tests/fixture/: reddit_atom.xml
api/src/tests/models/: mod.rs  subscription.rs
api/src/tests/routes/: mod.rs  subscription.rs  user.rs
api/src/tests/routes/application/: create_application.rs  mod.rs
api/src/tests/routes/public_api/: feed.rs  subscription.rs
api/src/tests/routes/subscription/: create_subscriptions.rs  get_subscription_by_id.rs  mod.rs  (+2 more)
api/src/utils/: date.rs  get_feed.rs  hash.rs  pagination.rs  serde.rs  to_url.rs
(+162 files in other folders)
