[package]
name = "therssproject"
version = "0.1.0"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>", "gillchristian <gillchristiang@gmail.com>"]
edition = "2021"

[dependencies]
config = "0.13.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
serde_derive = "1.0.137"
# Wait for wither to relase a new version.
# https://github.com/thedodd/wither/pull/89#issuecomment-1023644443
wither = { git = "https://github.com/thedodd/wither" }
futures = "0.3.21"
thiserror = "1.0.31"
axum = { version = "0.5.4", features = ["headers"] }
tokio = { version = "1.18.1", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tower-http = { version = "0.3.2", features = ["trace", "compression-br", "propagate-header", "sensitive-headers", "cors"] }
http = "0.2.7"
chrono = "0.4.19"
async-trait = "0.1.53"
# Investigate if wither::bson can be used instead and activate this feature.
bson = { version = "2.2.0", features = ["serde_with", "chrono-0_4"] }
jsonwebtoken = "8.1.0"
once_cell = "1.10.0"
bcrypt = "0.13.0"
validator = { version = "0.15.0", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"] }
feed-rs = "1.1.0"
url = "2.2.2"
uuid = { version = "1.0.0", features = ["v4"] }
lazy_static = "1.4.0"
again = "0.1.2"
sha2 = "0.10.2"

[dev-dependencies]
assert-json-diff = "2.0.1"
mockito = "0.31.0"
